[tool.poetry]
name = "oanda-candles"
version = "0.0.1"
description = "Oanda forex candle API built on top of oandapyV20"
authors = ["Andrew Allaire <andrew.allaire@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.7"
pytest = "^5.4.2"
requests = "^2.23.0"
time-int = "^0.0.2"
magic-kind = "^0.2.1"

[tool.poetry.dev-dependencies]
oandapyV20 = "^0.6.3"
forex-types = "^0.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
