[tool.poetry]
name = "oanda-candles"
version = "0.0.7"
description = "Oanda forex candle API built on top of oandapyV20"
authors = ["Andrew Allaire <andrew.allaire@gmail.com>"]
license = "Apache-2.0"
readme = "Readme.md"
repository = "https://github.com/aallaire/oanda-candles"

[tool.poetry.dependencies]
python = "^3.5"
requests = "^2.23.0"
time-int = "^0.0.3"
magic-kind = "^0.2.2"
oandapyV20 = "^0.6.3"
forex-types = "^0.0.6"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
